<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ctadmin.a03quiz.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#4689C8"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/photo_image_view"
                android:layout_width="match_parent"
                android:layout_height="200dp"

                android:layout_alignParentEnd="true"
                android:layout_below="@+id/title_text_view"
                android:layout_marginTop="15dp"
                android:src="@drawable/img1" />

            <RadioGroup
                android:id="@+id/radiogroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/title_text_view"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="46dp"
                android:orientation="vertical">


                <RadioButton
                    android:id="@+id/op13_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/op11_radio_button"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:text="@string/op13"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/op12_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/op13_radio_button"
                    android:layout_alignStart="@+id/op13_radio_button"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:text="@string/op12"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/op11_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignStart="@+id/op13_radio_button"
                    android:layout_marginBottom="74dp"
                    android:gravity="center"
                    android:text="@string/op11"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>

            <TextView
                android:id="@+id/q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#4689C8"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img2"
                android:layout_width="match_parent"
                android:layout_height="200dp"

                android:layout_alignParentEnd="true"
                android:layout_below="@+id/title_text_view"
                android:layout_marginTop="15dp"
                android:src="@drawable/img2" />

            <RadioGroup
                android:id="@+id/radiogroup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="46dp"
                android:orientation="vertical">


                <RadioButton
                    android:id="@+id/op23_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/op11_radio_button"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:text="@string/op23"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/op22_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/op13_radio_button"
                    android:layout_alignStart="@+id/op13_radio_button"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:text="@string/op22"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/op21_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignStart="@+id/op13_radio_button"
                    android:layout_marginBottom="74dp"
                    android:gravity="center"
                    android:text="@string/op21"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>

            <TextView
                android:id="@+id/q3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#4689C8"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img3"
                android:layout_width="match_parent"
                android:layout_height="200dp"

                android:layout_alignParentEnd="true"
                android:layout_below="@+id/title_text_view"
                android:layout_marginTop="15dp"
                android:src="@drawable/image3" />

            <EditText
                android:id="@+id/ans3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.12"
                android:hint="Enter your answer here"
                android:inputType="textMultiLine" />

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <TextView
                android:id="@+id/t4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#4689C8"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img4"
                android:layout_width="match_parent"
                android:layout_height="200dp"

                android:layout_alignParentEnd="true"
                android:layout_below="@+id/title_text_view"
                android:layout_marginTop="15dp"
                android:src="@drawable/image4" />

            <CheckBox
                android:id="@+id/op41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/op41"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/op42"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/op42"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/op43"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/op43"
                android:textAppearance="?android:textAppearanceMedium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <TextView
                android:id="@+id/t5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#4689C8"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img5"
                android:layout_width="match_parent"
                android:layout_height="200dp"

                android:layout_alignParentEnd="true"
                android:layout_below="@+id/title_text_view"
                android:layout_marginTop="15dp"
                android:src="@drawable/image5" />

            <CheckBox
                android:id="@+id/op51"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/op51"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/op52"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/op52"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/op53"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/op53"
                android:textAppearance="?android:textAppearanceMedium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Submit" />

            <Button
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Reset"


                />


        </LinearLayout>
    </ScrollView>


</RelativeLayout>
